finishied project part 2.3 better scene and added some java doc